--- a/cont.css
+++ b/cont.css
@@ -59,3 +59,139 @@ a{
 .container{
     width: 70%;
     margin: auto;
+    
+    
+    
+    #world {
+    background-image: url(rogerio-toledo-NrP9I1utqug-unsplash.jpg);
+    height: 370px;
+    background-position: ;
+    background-size: cover;
+    color: whitesmoke;
+    
+    font-family: sans-serif
+    
+    
+}
+
+#world h1{
+    
+    font-size: 50px;
+    margin-bottom: 20px;
+    padding-top: 150px;
+    text-align: center;
+
+}
+
+#continent h1{
+    font-family: sans-serif;
+    font-size: 40px;
+    color: #096f9c;
+    text-align: center;
+    margin-top: 30px;
+    padding: 35px
+    
+}
+
+#content {
+    height: 500px;
+    
+}
+
+#content .info-content2{
+    float: left;
+    width: 45%;
+    font-family: sans-serif;
+    padding-top: 20px;
+    font-size: 20px;
+    
+    
+    
+    
+
+}
+#content .info-content{
+    float: right;
+    width: 45%;
+    font-family: sans-serif;
+    padding-top: 20px;
+    font-size: 20px;
+}
+
+
+.butt {
+    padding: 13px;
+    border-radius: 15px;
+    font-size: 15px;
+    background-color: #096f9c;
+    color: whitesmoke;
+    margin-top: 10px;
+    border: 1px solid;
+    
+}
+
+.butt:hover{
+    background-color: whitesmoke;
+    color: #096f9c;
+}
+
+.butt2 {
+    padding: 13px;
+    border-radius: 15px;
+    font-size: 15px;
+    background-color: #096f9c;
+    color: whitesmoke;
+    margin-top: 55px;
+    border: 1px solid;
+    
+}
+
+.butt2:hover{
+    background-color: whitesmoke;
+    color: #096f9c;
+}
+
+
+#content .info-content3{
+    float: right;
+    width: 45%;
+    font-family: sans-serif;
+    padding-top: 20px;
+    font-size: 20px;
+}
+#content .info-content4{
+    float: left;
+    width: 45%;
+    font-family: sans-serif;
+    padding-top: 20px;
+    font-size: 20px;
+}
+.butt3 {
+    padding: 13px;
+    border-radius: 15px;
+    font-size: 15px;
+    background-color: #096f9c;
+    color: whitesmoke;
+    margin-top: 50px;
+    border: 1px solid;
+    
+}
+
+.butt3:hover{
+    background-color: whitesmoke;
+    color: #096f9c;
+}
+
+    
+#footer{
+    background-color:#333a45;
+    height: 100px;
+    color: whitesmoke;
+    margin-top: 100px;
+}
+#footer .ver{
+    font-family: sans-serif;
+    padding-top: 35px;
+    text-align: center;
+    font-size: 15px
+}
