--- a/cont.css
+++ b/cont.css
@@ -200,6 +200,12 @@ a{
 
 
 @media screen and (max-width: 1024px) {
+    
+    .container h1{
+        font-size: 25px;
+    }
+    
+    
     #header ul li a{
         font-size: 15px;
         padding: 10px
