--- a/cont.css
+++ b/cont.css
@@ -208,7 +208,7 @@ a{
     
     #header ul li a{
         font-size: 15px;
-        padding: 10px
+        padding: 25.5px 10px;
         
     }
     
